# super-puppy

./: .gitignore  CLAUDE.md  README.md  Run Super Puppy.command  install.sh  pyproject.toml  tasks.md  uninstall.sh
.github/workflows/: deploy-web.yml
app/: activity.html  diagnostics.html  manifest.json  menubar.py  mlx-video-run.py  profile-server.py  profiles.html  super-puppy.c  sw.js  tools.html
app/SuperPuppy.app/Contents/: Info.plist
config/claude-code-router/: config.json  role_filters.json
config/git/: allowed_signers
config/launchd/: com.local-models.menubar.plist  setenv.OLLAMA_HOST.plist
config/local-models/: easter_eggs.json  mcp_preferences.json  network.conf
config/mlx-server/: config-laptop.yaml  config.yaml
docs/: architecture.md  mlx-vlm-chat-template-issue.md  model-audit.md  model-prompting.md  tailscale-setup.md  troubleshooting.md  user-audit.md
docs/superpowers/plans/: 2026-04-11-local-video-tool.md
lib/: activity.py  hf_scanner.py  models.py
mcp/: local-models-server.py
tests/: _smoke_helpers.py  conftest.py  test_activity.py  test_core.py  test_deployment.py  test_e2e.py  test_error_handling.py  test_mcp_lifecycle.py  test_mcp_server.py  test_menu_refresh.py  test_mflux_dispatch.py  test_playground_coverage.py  test_profile_server.py  test_remote_access.sh  test_tools_smoke_everyday.py  test_tools_smoke_laptop.py
web/: index.html  package-lock.json  package.json
