[project]
name = "super-puppy"
version = "0.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end tests that load heavyweight models (minutes). Run with `pytest -m slow` or `pytest -m ''` to include.",
    "smoke: live profile-server tests against real Ollama/MLX/mflux. Included in the default `pytest tests/` run; excluded from the pre-commit hook because cold loads make them occasionally flaky.",
    "e2e: tests that require live Ollama/MLX services.",
]
